tests/good/simple2.latte
int main() {
	int x;
	int y;
	int z;
	return 20;
	{
		{
			{
			k = 23;
			}
		}
	}
	return 0;
}
