tests/bad/frontend/multipleClassDeclaration.latte
class A {
	inr f() { return 0;}}
class A {}
class A extends B {}

int main() {
	return 0;
}
